--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body ng-controller="feedbackCtrl">
 <div class="panel panel-default">
     <div class="panel-heading text-center">
-        <h1>{{data.question}}</h1>
+        <h1 ng-bind="data.question"></h1>
     </div>
     <div class="panel-body  text-center">
         <div class="row" ng-repeat="row in data.rows">
@@ -37,11 +37,9 @@
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
                 <div class="form-group">
-                    <button ng-hide="person.answer" class="btn btn-success" data-toggle="modal" data-target="#model{{person.id}}">回答</button>
+                    <button ng-hide="person.answer" class="btn btn-default" data-toggle="modal" data-target="#model{{person.id}}">回答</button>
                     <button ng-show="person.answer" class="btn btn-success"   data-toggle="modal" data-target="#model{{person.id}}">查看</button>
-                    <button class="btn btn-warning" type="button" ng-click="person.star = person.star + 1">
-                        <span class="glyphicon glyphicon-star"></span> <span class="badge">{{person.star}}</span>
-                    </button>
+
                 </div>
             </div>
         </div>
@@ -67,13 +65,7 @@
 <script>
     var app = angular.module("feedbackApp", ["wilddog"]);
     app.controller("feedbackCtrl", function ($scope, $wilddogObject) {
-        var ref = new Wilddog("https://zffeedback.wilddogio.com");
-        var syncObject  = $wilddogObject(ref);
-        syncObject.$bindTo($scope,"data");
-
-        $scope.answer = function(person){
-            $('.bs-example-modal-lg').modal('show');
-        }
+        $wilddogObject(new Wilddog("https://zffeedback.wilddogio.com")).$bindTo($scope,"data");
     });
 </script>
 </html>
