--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 </head>
 <body ng-controller="feedbackCtrl">
 <div class="panel panel-default">
     <div class="panel-heading text-center">
-        <h1 ng-bind="data.question"></h1>
+        <h1 >{{data.question}}<button class="btn btn-default" ng-click="choose()" >提问</button></h1>
     </div>
     <div class="panel-body  text-center">
         <div class="row" ng-repeat="row in data.rows">
-            <div class="col-md-1" ng-repeat="person in row">
+            <div class="col-md-1" ng-class="{'jumbotron':luck == person.id }" ng-repeat="person in row">
                 <div class="form-group">
-                    <input class="form-control" type="text" ng-model="person.name">
+                    <input ng-model-options="{ updateOn: 'blur' }" ng-hide="typed(person.name)" class="form-control" type="text" ng-model="person.name">
+                    <span class="label label-info" ng-show="typed(person.name)" ng-bind="person.name"></span>
                 </div>
-                <div class="modal fade  " id="model{{person.id}}">
+                <div class="modal fade" id="model{{person.id}}">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -28,7 +26,7 @@
                                 <h4 class="modal-title">回答</h4>
                             </div>
                             <div class="modal-body">
-                                <textarea class="form-control"  cols="120" rows="30" ng-model="person.answer"></textarea>
+                                <textarea class="form-control"  cols="90" rows="20" ng-model="person.answer"></textarea>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -37,15 +35,18 @@
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
                 <div class="form-group">
-                    <button ng-hide="person.answer" class="btn btn-default" data-toggle="modal" data-target="#model{{person.id}}">回答</button>
-                    <button ng-show="person.answer" class="btn btn-success"   data-toggle="modal" data-target="#model{{person.id}}">查看</button>
-
+                    <button ng-hide="person.answer" class="btn btn-default btn-sm" data-toggle="modal" data-target="#model{{person.id}}">回答</button>
+                    <button ng-show="person.answer" class="btn btn-success btn-sm"   data-toggle="modal" data-target="#model{{person.id}}">查看</button>
+                    <button class="btn btn-warning btn-sm" type="button" ng-click="person.star = person.star+1">
+                        <span class="glyphicon glyphicon-star"></span> <span class="badge" ng-bind="person.star"></span>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
     <div class="panel-footer">
         <input type="text" ng-model="data.question" class="form-control">
+        <button class="btn btn-warning" type="button" ng-click="start()">
     </div>
 </div>
 
@@ -57,15 +58,38 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!-- AngularJS -->
-<script src="http://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
+<script src="//cdn.bootcss.com/angular.js/1.4.6/angular.min.js"></script>
 <!-- Wilddog -->
 <script src="https://cdn.wilddog.com/sdk/js/current/wilddog.js"></script>
 <!-- Wild-Angular -->
 <script src="https://cdn.wilddog.com/libs/wild-angular/0.0.2/wild-angular.min.js"></script>
 <script>
     var app = angular.module("feedbackApp", ["wilddog"]);
-    app.controller("feedbackCtrl", function ($scope, $wilddogObject) {
-        $wilddogObject(new Wilddog("https://zffeedback.wilddogio.com")).$bindTo($scope,"data");
+    app.controller("feedbackCtrl", function ($scope, $wilddogObject,$timeout) {
+        var ref = new Wilddog("https://zffeedback.wilddogio.com");
+        var data = $wilddogObject(ref);
+        data.$bindTo($scope,"data");
+        $scope.luck = -1;
+        $scope.typed = function(name){
+            return !/^[A-Z]/.test(name);
+        }
+        $scope.choose = function(){
+            var count = 0;
+            var max = Math.floor(Math.random()*144);
+            function next(){
+                $timeout(function(){
+                    var name = data.rows[Math.floor(count/12)][count%12].name;
+                    if(typed(name)){
+                        $scope.luck = count;
+                    }
+                    if(count++<max){
+                        next();
+                    }
+                },23);
+            }
+            next();
+
+        }
     });
 </script>
 </html>
