--- a/data.html
+++ b/data.html
@@ -11,16 +11,18 @@
 <script>
     var ref = new Wilddog("https://zffeedback.wilddogio.com");
     var data = {
+        "column":7,
+        "row":8,
         "question": "请告诉我今天的天气怎么样?",
         "rows": []
     }
-    var rows = ['A','B','C','D','E','F','G','H','I','J','K','L']
-    for(var i=1;i<=12;i++){
+    var rows = ['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z']
+    for(var i=1;i<=data.column;i++){
         var row = [];
         var rowPrefix = [i];
-        for(var j=1;j<=12;j++){
+        for(var j=1;j<=data.row;j++){
             row.push({
-                id:12*(i-1)+(j-1),
+                id:data.column*(i-1)+(j-1),
                 name: rows[i-1]+j,
                 answer: "",
                 star: 0
