张旭第一次提交

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./node_modules/highlightjs/styles/atelier-cave.light.css">
 </head>
 <body ng-controller="feedbackCtrl">
 <div class="panel panel-default">
@@ -25,8 +26,13 @@
                                         aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">回答</h4>
                             </div>
-                            <div class="modal-body">
-                                <textarea class="form-control"  cols="90" rows="20" ng-model="person.answer"></textarea>
+                            <div class="modal-body row">
+                                <div class="col-xs-6">
+                                    <textarea class="form-control"  cols="90" rows="20" ng-model="person.answer" ng-change="inputAnswer(person)" tab></textarea>
+                                </div>
+                                <div class="col-xs-6">
+                                    <div class="outputText fill" style="text-align: left;" id="outputText" ng-bind-html="outputText"></div>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -75,8 +81,14 @@
 <script src="https://cdn.wilddog.com/sdk/js/current/wilddog.js"></script>
 <!-- Wild-Angular -->
 <script src="https://cdn.wilddog.com/libs/wild-angular/0.0.2/wild-angular.min.js"></script>
+<!-- angular-sanitize -->
+<script src="./node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+<!-- marked -->
+<script src="./node_modules/marked/lib/marked.js"></script>
+<!-- highlightjs -->
+<script src="./node_modules/highlightjs/highlight.pack.js"></script>
 <script>
-    var app = angular.module("feedbackApp", ["wilddog"]);
+    var app = angular.module("feedbackApp", ["wilddog","ngSanitize"]);
     app.controller("feedbackCtrl", function ($scope, $wilddogObject,$timeout) {
         var ref = new Wilddog("https://zffeedback.wilddogio.com");
         var data = $wilddogObject(ref);
@@ -139,6 +151,46 @@
                 }
                 $scope.back.rows.push(row);
                 $scope.back.$save($scope.back.rows);
+            }
+        };
+
+        marked.setOptions({
+            renderer: new marked.Renderer(),
+            gfm: true,
+            tables: true,
+            breaks: false,
+            pedantic: false,
+            sanitize: false,
+            smartLists: true,
+            smartypants: false,
+            highlight: function (code) {
+                return hljs.highlightAuto(code).value;
+            }
+        });
+
+        $scope.inputAnswer = function(person){
+            $scope.inputText = person.answer;
+            $scope.$watch("inputText", function(newValue) {
+                console.log(newValue);
+                $scope.outputText = marked(newValue);
+            });
+        }
+    }).directive('tab', function () {
+        return {
+            restrict: 'A',
+            link: function (scope, element, attrs) {
+                element.on('keydown', function (event) {
+                    var keyCode = event.keyCode || event.which;
+                    if (keyCode === 9) {
+                        event.preventDefault();
+                        var start = this.selectionStart;
+                        var end = this.selectionEnd;
+                        element.val(element.val().substring(0, start)
+                                + '\t' + element.val().substring(end));
+                        this.selectionStart = this.selectionEnd = start + 1;
+                        element.triggerHandler('change');
+                    }
+                });
             }
         }
     });
