--- a/index.html
+++ b/index.html
@@ -9,29 +9,33 @@
 <body ng-controller="feedbackCtrl">
 <div class="panel panel-default">
     <div class="panel-heading text-center">
-        <h1>{{data.question}}<button class="btn btn-default" ng-click="choose()" >提问</button></h1>
+        <h1>{{data.question}}
+            <button class="btn btn-default" ng-click="choose()">提问</button>
+        </h1>
     </div>
     <div class="panel-body  text-center">
         <div class="row" ng-repeat="row in data.rows">
             <div class="col-md-1" ng-class="{'jumbotron':luck == person.id }" ng-repeat="person in row">
                 <div class="form-group">
-                    <input ng-model-options="{ updateOn: 'blur' }" ng-hide="typed(person.name)" class="form-control" type="text" ng-model="person.name">
+                    <input ng-model-options="{ updateOn: 'blur' }" ng-hide="typed(person.name)" class="form-control"
+                           type="text" ng-model="person.name">
                     <span class="label label-info" ng-show="typed(person.name)" ng-bind="person.name"></span>
                 </div>
                 <div class="modal fade" id="model{{person.id}}">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">回答</h4>
                             </div>
                             <div class="modal-body row">
                                 <div class="col-xs-6">
-                                    <textarea class="form-control"  cols="90" rows="20" ng-model="person.answer" ng-change="inputAnswer(person)" tab></textarea>
+                                    <textarea class="form-control" cols="90" rows="20" ng-model="person.answer"
+                                              ng-change="inputAnswer(person.answer)" tab></textarea>
                                 </div>
                                 <div class="col-xs-6">
-                                    <div class="outputText fill" style="text-align: left;" id="outputText" ng-bind-html="outputText"></div>
+                                    <div class="outputText fill" style="text-align: left;" id="outputText"
+                                         ng-bind-html="outputText"></div>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -41,8 +45,12 @@
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
                 <div class="form-group">
-                    <button ng-hide="person.answer" class="btn btn-default btn-sm" data-toggle="modal" data-target="#model{{person.id}}">回答</button>
-                    <button ng-show="person.answer" class="btn btn-success btn-sm"   data-toggle="modal" data-target="#model{{person.id}}">查看</button>
+                    <button ng-hide="person.answer" class="btn btn-default btn-sm"
+                            ng-click="show('#model'+person.id,person.answer)">回答
+                    </button>
+                    <button ng-show="person.answer" class="btn btn-success btn-sm"
+                            ng-click="show('#model'+person.id,person.answer)">查看
+                    </button>
                     <button class="btn btn-warning btn-sm" type="button" ng-click="person.star = person.star+1">
                         <span class="glyphicon glyphicon-star"></span> <span class="badge" ng-bind="person.star"></span>
                     </button>
@@ -57,16 +65,16 @@
                 <button class="btn btn-warning" type="button" ng-click="start()">开始</button>
             </div>
             <div class="col-xs-3">
-                <input type="text" ng-model="data.column" class="form-control"/>
+                行<input type="text" ng-model="data.row" class="form-control"/>
             </div>
             <div class="col-xs-3">
-                <input type="text" ng-model="data.row" class="form-control"/>
+                列<input type="text" ng-model="data.column" class="form-control"/>
             </div>
             <div class="col-xs-3">
-                <button class="btn btn-default" ng-click="class()" >上课</button>
+                <button class="btn btn-default" ng-click="class()">上课</button>
             </div>
+        </div>
     </div>
-</div>
 
 
 </body>
@@ -82,53 +90,54 @@
 <!-- Wild-Angular -->
 <script src="https://cdn.wilddog.com/libs/wild-angular/0.0.2/wild-angular.min.js"></script>
 <!-- angular-sanitize -->
-<script src="./node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="http://7xjf2l.com2.z0.glb.qiniucdn.com/angular-sanitize.min.js"></script>
 <!-- marked -->
-<script src="./node_modules/marked/lib/marked.js"></script>
+<script src="http://7xjf2l.com2.z0.glb.qiniucdn.com/marked.min.js"></script>
 <!-- highlightjs -->
-<script src="./node_modules/highlightjs/highlight.pack.js"></script>
+<script src="http://7xjf2l.com2.z0.glb.qiniucdn.com/highlight.pack.min.js"></script>
 <script>
-    var app = angular.module("feedbackApp", ["wilddog","ngSanitize"]);
-    app.controller("feedbackCtrl", function ($scope, $wilddogObject,$timeout) {
+    var app = angular.module("feedbackApp", ["wilddog", "ngSanitize"]);
+    app.controller("feedbackCtrl", function ($scope, $wilddogObject, $timeout) {
         var ref = new Wilddog("https://zffeedback.wilddogio.com");
         var data = $wilddogObject(ref);
         $scope.back = data;
-        data.$bindTo($scope,"data");
+        data.$bindTo($scope, "data");
         $scope.luck = -1;
-        $scope.typed = function(name){
+        $scope.typed = function (name) {
             return !/^[A-Z]/.test(name);
         }
-        $scope.choose = function(){
+        $scope.choose = function () {
             var count = 0;
-            var max = Math.floor(Math.random()*$scope.back.column*$scope.back.row);
-            function next(time){
-                $timeout(function(){
-                    console.log($scope.back.rows,Math.floor(count/$scope.back.column),count%($scope.back.row));
-                    var name = $scope.back.rows[Math.floor(count/$scope.back.column)][count%($scope.back.row)].name;
-                    if($scope.typed(name) && (count<max)){
-                        $scope.luck = count;
+            var max = Math.ceil(Math.random() * $scope.back.column * $scope.back.row);
+            function next(time) {
+                $timeout(function () {
+                    if(count < max){
+                        var name = $scope.back.rows[Math.floor((count) / $scope.back.column)][count % ($scope.back.column)].name;
+                        var ctime = 0;
+                        if($scope.typed(name)){
+                            $scope.luck = count;
+                            ctime = 23;
+                        }
                         count++;
-                        next(30);
-                    }else if(count<max){
-                        count++;
-                        next(0);
+                        next(ctime);
                     }
-                },time);
+                }, time);
             }
+
             next(0);
         };
-        var rowNames = ['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z'];
+        var rowNames = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'];
         //上课
-        $scope.class = function(){
+        $scope.class = function () {
             var rows = [];
             $scope.back.rows = [];
-            for(var i=1;i<=data.column;i++){
+            for (var i = 1; i <= data.row; i++) {
                 var row = [];
                 var rowPrefix = [i];
-                for(var j=1;j<=data.row;j++){
+                for (var j = 1; j <= data.column; j++) {
                     row.push({
-                        id:data.column*(i-1)+(j-1),
-                        name: rowNames[i-1]+j,
+                        id: data.column * (i - 1) + (j - 1),
+                        name: rowNames[i - 1] + j,
                         answer: "",
                         star: 0
                     });
@@ -137,22 +146,20 @@
                 $scope.back.$save($scope.back.rows);
             }
         };
-        $scope.start = function(){
+        $scope.start = function () {
             var rows = [];
-            $scope.back.rows = [];
-            for(var i=1;i<=data.column;i++){
-                var row = [];
-                var rowPrefix = [i];
-                for(var j=1;j<=data.row;j++){
-                    row.push({
-                        answer: "",
-                        star: 0
-                    });
+            for (var i = 1; i <= data.row; i++) {
+                for (var j = 1; j <= data.column; j++) {
+                    $scope.back.rows[i - 1][j - 1].answer = ""
+                    $scope.back.rows[i - 1][j - 1].star = 0;
                 }
-                $scope.back.rows.push(row);
                 $scope.back.$save($scope.back.rows);
             }
         };
+        $scope.show = function (id, answer) {
+            $(id).modal('show')
+            $scope.inputAnswer(answer);
+        }
 
         marked.setOptions({
             renderer: new marked.Renderer(),
@@ -168,11 +175,15 @@
             }
         });
 
-        $scope.inputAnswer = function(person){
-            $scope.inputText = person.answer;
-            $scope.$watch("inputText", function(newValue) {
+        $scope.$watch("inputText", function (newValue) {
+            if (newValue)
                 $scope.outputText = marked(newValue);
-            });
+            else
+                $scope.outputText = '';
+        });
+
+        $scope.inputAnswer = function (answer) {
+            $scope.inputText = answer;
         }
     }).directive('tab', function () {
         return {
