--- a/admin.html
+++ b/admin.html
@@ -15,10 +15,13 @@
     </div>
     <div class="panel-body  text-center">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-4">
+                行<input type="text" ng-model="data.row" class="form-control"/>
+            </div>
+            <div class="col-xs-4">
                 列<input type="text" ng-model="data.column" class="form-control"/>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-4">
                 <button class="btn btn-danger  btn-lg" ng-click="class()">上课</button>
             </div>
         </div>
