--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button ng-show="person.answer" class="btn btn-success btn-sm"
                             ng-click="show('#model'+person.id,person.answer)">查看
                     </button>
-                    <button class="btn" ng-class="{'btn-warning':person.star>0,'btn-danger':person.star>10,'btn-default':person.star==0}" type="button" ng-click="person.star = person.star+1">
+                    <button ng-show="person.answer" class="btn" ng-class="{'btn-warning':person.star>0,'btn-danger':person.star>10,'btn-default':person.star==0}" type="button" ng-click="person.star = person.star+1">
                         <span class="glyphicon glyphicon-star"></span> <span class="badge" ng-bind="person.star"></span>
                     </button>
                 </div>
