--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <input ng-model-options="{ updateOn: 'blur' }" ng-show="!person.name || !typed(person.name)" class="form-control"
                            type="text" ng-model="person.name">
-                    <span ng-click="person.name='Reset'" class="label label-info" ng-show="person.name && typed(person.name)" ng-bind="person.name"></span>
+                    <span ng-click="person.name='R'+person.name" class="label label-info" ng-show="person.name && typed(person.name)" ng-bind="person.name"></span>
                 </div>
                 <div class="modal fade" id="model{{person.id}}">
                     <div class="modal-dialog">
