--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     });
 </script>
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
+	<div class="ds-thread" data-thread-key="acf5e2c4430021f89d1a50a1f11f2598" data-title="珠峰课堂" data-url="http://zhufengnodejs.github.io/feedback/"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
