使用新的数据库地址

--- a/admin.html
+++ b/admin.html
@@ -52,10 +52,11 @@
 <script>
     var app = angular.module("feedbackApp", ["wilddog", "ngSanitize"]);
     app.controller("feedbackCtrl", function ($scope, $wilddogObject, $timeout) {
-        var ref = new Wilddog("https://zffeedback.wilddogio.com");
+        var ref = new Wilddog("https://8368feedback.wilddogio.com");
         var data = $wilddogObject(ref);
         $scope.back = data;
         data.$bindTo($scope, "data");
+
         $scope.luck = -1;
         $scope.typed = function (name) {
             return !/^[A-Z]/.test(name);
